Name changed to Financial Year

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     } else {
                         document.getElementById("output").innerHTML = `
                             <h3>Agent Details</h3>
-                            <p><strong>Month & Year:</strong> ${data.monthYear}</p>
+                            <p><strong>Financial Year:</strong> ${data.monthYear}</p>
                             <p><strong>As On:</strong> ${data.asOnDate}</p>
                             <table>
                                 <tr><th>Field</th><th>Value</th></tr>
@@ -121,4 +121,5 @@
 
 </body>
 </html>
+
 
